--- a/IntegratedPresenter/ViewModels/PATTERNKeyControl.xaml
+++ b/IntegratedPresenter/ViewModels/PATTERNKeyControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Grid Background="#171717">
+        <Grid Background="{StaticResource darkBrush}">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -45,7 +45,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource lightBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -64,7 +64,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -82,7 +82,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -100,7 +100,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -119,7 +119,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -135,7 +135,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -157,7 +157,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -172,7 +172,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -187,7 +187,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -204,7 +204,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -225,7 +225,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -245,7 +245,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -266,7 +266,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -287,7 +287,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -308,7 +308,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -329,7 +329,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -350,7 +350,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -371,7 +371,7 @@
                             <Setter Property="Border.BorderBrush" Value="{StaticResource darkBrush}"></Setter>
                             <Style.Triggers>
                                 <Trigger Property="Border.IsMouseOver" Value="True">
-                                    <Setter Property="Border.BorderBrush" Value="{StaticResource redBrush}"></Setter>
+                                    <Setter Property="Border.BorderBrush" Value="{StaticResource lightBlueBrush}"></Setter>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -426,23 +426,8 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" FontSize="15" Foreground="#afafaf" HorizontalAlignment="Center" VerticalAlignment="Center">INVERT</TextBlock>
 
-                    <Button Click="ClickInvert" Grid.Column="0" Focusable="false" Name="BtnINVERT" Foreground="White" Background="{StaticResource redBrush}" Cursor="Hand" Width="60" Height="35">
-                        <Button.Content>
-                            INVERT
-                        </Button.Content>
-                        <Button.Template>
-                            <ControlTemplate>
-                                <Border Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Foreground}" Margin="3" BorderThickness="1">
-                                    <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" Content="{Binding Path=Content, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"></ContentControl>
-                                </Border>
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Cursor" Value="{Binding Path=Cursor, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" TargetName="Border"></Setter>
-                                        <Setter Property="BorderBrush" Value="{Binding Path=Background, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" TargetName="Border"></Setter>
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Button.Template>
+                    <Button Click="ClickInvert" Grid.Column="0" Focusable="false" Name="BtnINVERT" Foreground="White" Background="{StaticResource lightBlueBrush}" Cursor="Hand" Width="60" Height="35" Style="{StaticResource SelectorTextButton}">
+                        INVERT
                     </Button>
 
                     <Slider Name="slide_x" Maximum="1" Minimum="0" Value="0.5" Grid.Column="2" Focusable="False" IsTabStop="False" VerticalAlignment="Center" Margin="10" Cursor="Hand"></Slider>
