--- a/IntegratedPresenter/Windows/AudioPlayer.xaml
+++ b/IntegratedPresenter/Windows/AudioPlayer.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IntegratedPresenter.Main"
         mc:Ignorable="d"
-        Background="#3f3f3f"
+        Background="{StaticResource darkBlackBrush}"
         PreviewKeyDown="Window_PreviewKeyDown"
         Closed="Window_Closed"
         Topmost="True"
-        Title="Audio Player" Height="240" Width="400">
+        Title="Audio Player" Height="350" Width="400">
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
         </Grid.RowDefinitions>
 
 
@@ -23,31 +23,32 @@
                 <ColumnDefinition Width="100"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Click="ClickLoadAudio" IsTabStop="False" x:Name="btnLoadAudio" Grid.Row="0" Grid.Column="0" Margin="10, 10, 10, 10">
-                <Button.Template>
-                    <ControlTemplate>
-                        <Border Name="Border" Background="#1d1d1d" BorderBrush="Orange" Margin="3" BorderThickness="1">
-                            <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Orange">LOAD</ContentControl>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Cursor" Value="Hand"></Setter>
-                                <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Button.Template>
+            <Button Click="ClickLoadAudio" IsTabStop="False" x:Name="btnLoadAudio" MaxHeight="50" Grid.Row="0" Grid.Column="0" Margin="10, 10, 10, 10" Style="{StaticResource SelectorTextButton}">
+                LOAD
             </Button>
 
-            <TextBlock Name="tbFileName" Grid.Column="1" Foreground="Orange" Background="#1d1d1d" Margin="10" Padding="10" TextAlignment="Left" VerticalAlignment="Center">(Open File...)</TextBlock>
-         
+            <TextBlock Name="tbFileName" Grid.Column="1" Foreground="{StaticResource tealBrush}" Background="{StaticResource darkBrush}" Margin="10" Padding="10" TextAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap">(Open File...)</TextBlock>
+
         </Grid>
 
         <Border Grid.Row="1" Style="{StaticResource GroupBorder}">
-            <StackPanel>
-                <TextBlock TextAlignment="Center" Margin="0,5,20,0" Style="{StaticResource GrayText}">AUDIO PLAYBACK CONTROLS</TextBlock>
-                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                    <Grid>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"></RowDefinition>
+                    <RowDefinition Height="1.5*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <TextBlock TextAlignment="Center" VerticalAlignment="Center" Style="{StaticResource GrayText}">AUDIO PLAYBACK CONTROLS</TextBlock>
+                </Grid>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
                         <Viewbox Name="ksc_1" Panel.ZIndex="1" Height="50" Width="50">
                             <StackPanel Orientation="Horizontal">
                                 <Border Padding="10, 0" Style="{StaticResource UIShortcutBdr}">
@@ -59,7 +60,7 @@
                         </Viewbox>
                         <Button Name="BtnRestartAudio" Click="ClickRestartAudio" Style="{StaticResource SwitcherButton_Disabled}">RESTART</Button>
                     </Grid>
-                    <Grid>
+                    <Grid Grid.Column="1">
                         <Viewbox Name="ksc_2" Panel.ZIndex="1" Height="50" Width="50">
                             <StackPanel Orientation="Horizontal">
                                 <Border Padding="10, 0" Style="{StaticResource UIShortcutBdr}">
@@ -71,7 +72,7 @@
                         </Viewbox>
                         <Button Name="BtnStopAudio" Click="ClickStopAudio" Style="{StaticResource SwitcherButton_Disabled}">STOP</Button>
                     </Grid>
-                    <Grid>
+                    <Grid Grid.Column="2">
                         <Viewbox Name="ksc_3" Panel.ZIndex="1" Height="50" Width="50">
                             <StackPanel Orientation="Horizontal">
                                 <Border Padding="10, 0" Style="{StaticResource UIShortcutBdr}">
@@ -83,7 +84,7 @@
                         </Viewbox>
                         <Button Name="BtnPauseAudio" Click="ClickPauseAudio" Style="{StaticResource SwitcherButton_Disabled}">PAUSE</Button>
                     </Grid>
-                    <Grid>
+                    <Grid Grid.Column="3">
                         <Viewbox Name="ksc_4" Panel.ZIndex="1" Height="50" Width="50">
                             <StackPanel Orientation="Horizontal">
                                 <Border Padding="10, 0" Style="{StaticResource UIShortcutBdr}">
@@ -95,25 +96,28 @@
                         </Viewbox>
                         <Button Name="BtnPlayAudio" Click="ClickPlayAudio" Style="{StaticResource SwitcherButton_Disabled}">PLAY</Button>
                     </Grid>
-                </StackPanel>
-                <Grid>
+                </Grid>
+                <Grid Grid.Row="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
-                        <TextBlock Foreground="Orange">T-</TextBlock>
-                        <TextBlock Name="TbAudioTimeRemaining" Foreground="Orange">0:00</TextBlock>
-                    </StackPanel>
-                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="20,0,0,0">
-                        <TextBlock Foreground="Orange">T+</TextBlock>
-                        <TextBlock Name="TbAudioTimeCurrent" Foreground="Orange">0:00</TextBlock>
-                        <TextBlock Foreground="Orange">/</TextBlock>
-                        <TextBlock Name="TbAudioTimeDurration" Foreground="Orange">0:00</TextBlock>
-                    </StackPanel>
-
+                    <Viewbox Grid.Column="0" Margin="10">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
+                            <TextBlock Foreground="{StaticResource whiteBrush}">T-</TextBlock>
+                            <TextBlock Name="TbAudioTimeRemaining" Foreground="{StaticResource redBrush}">0:00</TextBlock>
+                        </StackPanel>
+                    </Viewbox>
+                    <Viewbox Grid.Column="1" Margin="10">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="20,0,0,0">
+                            <TextBlock Foreground="{StaticResource whiteBrush}">T+</TextBlock>
+                            <TextBlock Name="TbAudioTimeCurrent" Foreground="{StaticResource greenBrush}">0:00</TextBlock>
+                            <TextBlock Foreground="{StaticResource whiteBrush}">/</TextBlock>
+                            <TextBlock Name="TbAudioTimeDurration" Foreground="{StaticResource tealBrush}">0:00</TextBlock>
+                        </StackPanel>
+                    </Viewbox>
                 </Grid>
-            </StackPanel>
+            </Grid>
         </Border>
 
         <MediaElement Name="audioplayer" Visibility="Collapsed"></MediaElement>
