--- a/IntegratedPresenter/ViewModels/PipPresetButton.xaml
+++ b/IntegratedPresenter/ViewModels/PipPresetButton.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="80" d:DesignWidth="100">
     <Grid>
         <Grid>
-            <Viewbox Name="ksc_key" Panel.ZIndex="1" Height="50" Width="50">
+            <Viewbox Name="ksc_key" Panel.ZIndex="1" Height="50" Width="50" MaxHeight="50" MaxWidth="50">
                 <StackPanel Orientation="Horizontal">
                     <Border Style="{StaticResource UIShortcutBdr}">
                         <Viewbox>
@@ -19,23 +19,8 @@
                     </Border>
                 </StackPanel>
             </Viewbox>
-            <Button Name="btn" Click="Button_Click" Focusable="False" IsTabStop="False" Foreground="White" Background="WhiteSmoke" Style="{StaticResource InactivePIPControlButton}">
-                <Button.Template>
-                    <ControlTemplate>
-                        <Border Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Background}" Margin="3" BorderThickness="1">
-                            <local:PIPPlacePreview x:Name="PIPPreview"></local:PIPPlacePreview>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Cursor" Value="Hand"></Setter>
-                                <Setter Property="BorderBrush" Value="Yellow" TargetName="Border"></Setter>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Button.Template>
-                <!--<DataTrigger Value="True" Binding="{Binding IsActive}">-->
-                    <!--<Setter Property="{}" Value="Red"></Setter>-->
-                <!--</DataTrigger>-->
+            <Button Name="btn" Click="Button_Click" Focusable="False" IsTabStop="False" Style="{StaticResource InactivePIPControlButton}">
+                <local:PIPPlacePreview x:Name="PIPPreview"></local:PIPPlacePreview>
             </Button>
         </Grid>
     </Grid>
